--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .cardContainer{
@@ -11,7 +13,7 @@
 }
 
 .cardContainer:hover{
-   background-color: var(--ternary-color);
+   border: 2px solid gray;
 }
 
 .cardImage{
@@ -51,7 +53,7 @@
 
 
 .addButton{
-  background-color: #6558f5;
+  background-color: var(--header-color);
   border: none;
   width: 100%;
   border-radius: 1px;
@@ -63,7 +65,8 @@
 }
 
 .addButton:hover{
-  background-color: #7064f1;
+  background-color: var(--button-hover-color);
+  transition-duration: 0.3s;
 }
 
 .favorite{
