--- a/src/components/SideNavCart/style.css
+++ b/src/components/SideNavCart/style.css
@@ -5,7 +5,7 @@
   opacity: 0.95;
   position: absolute;
   right: -30%;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
   border-radius: 10px;
   color: var(--secondary-color);
   /* display: none; */
@@ -14,7 +14,7 @@
 .showHideCart{
   /* display: block; */
   right: 0;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
 }
 
 
@@ -71,7 +71,7 @@
   width: 100%;
   height: 40px;
   margin: 10px 0 10px 0;
-  background-color: #6558f5;
+  background-color: var(--header-color);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -94,7 +94,9 @@
 }
 
 .finishPurchaseButton:hover{
-  background-color: #7064f1;
+  background-color: var(--button-hover-color);
+  transition-duration: 0.5s;
+  border: 1px solid gray;
 }
 
 .finishPurchaseButton:disabled{
@@ -109,7 +111,7 @@
 
   .showHideCart{
     right: 0;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
   }
 }
 
@@ -122,7 +124,7 @@
 
   .showHideCart{
     right: 0;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
   }
 }
 
@@ -134,6 +136,6 @@
 
   .showHideCart{
     right: 0;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
   }
 }
