--- a/src/App.css
+++ b/src/App.css
@@ -7,33 +7,33 @@ html, body{
   overflow-x: hidden;
   width: 100vw;
   height: 100%;
-  background-color: var(--primary-color);
+  /* background: linear-gradient(var(--primary-color), var(--secondary-color), var(--primary-color), var(--secondary-color)); */
   transition-duration: 0.5s;
 }
 
 :root{
   --primary-color: #333;
-  --secondary-color: white;
-  --ternary-color: rgb(141, 137, 137);
-  --scroll-bar-primary-color: #535252;
-  --scroll-bar-secondary-color: #797676;
-  --scroll-bar-ternary-color: #979393;
-  --header-color: black;
-  --button-hover-color: #222;
-}
-
-.dark-mode{
-  --primary-color: white;
   --secondary-color: black;
-  --ternary-color: #ddd;
+  --ternary-color: rgb(141, 137, 137);
+  --fonts-color: white;
   --scroll-bar-primary-color: #535252;
   --scroll-bar-secondary-color: #797676;
   --scroll-bar-ternary-color: #979393;
-  --header-color: #8dd7cf;
-  --button-hover-color: #69a7a0;
+  --button-hover-color: #222;
+  background: linear-gradient(var(--primary-color), var(--secondary-color), var(--primary-color), var(--secondary-color));
 }
 
-
+.light-mode{
+  --primary-color: white;
+  --secondary-color: #8dd7cf;
+  --ternary-color: #ddd;
+  --fonts-color: black;
+  --scroll-bar-primary-color: #535252;
+  --scroll-bar-secondary-color: #797676;
+  --scroll-bar-ternary-color: #979393;
+  --button-hover-color: #69a7a0;
+  background-color: white !important;
+}
 
 ::-webkit-scrollbar{
   background-color: var(--scroll-bar-primary-color);
