--- a/src/components/Checkout/style.css
+++ b/src/components/Checkout/style.css
@@ -18,7 +18,7 @@
   width: 100%;
   gap: 3%;
   padding-top: 10%;
-  color: var(--secondary-color);
+  color: var(--fonts-color);
 }
 
 .formData input{
@@ -37,7 +37,7 @@
   height: 100%;
   min-width: fit-content;
   max-width: 100%;
-  color: var(--secondary-color);
+  color: var(--fonts-color);
 }
 
 .checkoutList ul{
@@ -71,7 +71,7 @@
   width: 100%;
   height: 40px;
   margin: 10px 0 10px 0;
-  background-color: var(--header-color);
+  background-color: var(--secondary-color);
   border: none;
   border-radius: 5px;
   cursor: pointer;
