--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,11 @@
 .header{
-  background-color: var(--header-color);
+  background-color: var(--secondary-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: var(--primary-color);
   padding: 5px 3% 5px 3%;
+  transition-duration: 2s;
 }
 
 .header a:visited{
