--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -18,7 +18,7 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 20px;
-  color: var(--secondary-color);
+  color: var(--fonts-color);
   padding: 20px 0 20px 0;
   border: 2px solid gray;
 }
