--- a/src/components/SideNavFavorites/style.css
+++ b/src/components/SideNavFavorites/style.css
@@ -8,7 +8,7 @@
   transition-duration: 0.5s;
   border-radius: 10px;
   height: 100vh;
-  color: var(--secondary-color);
+  color: var(--fonts-color);
 }
 
 .showHideFavorites{
