criando menu do usuário no header

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -10,6 +10,7 @@
 .cardContainer{
   border: 1px solid gray;
   color: var(--fonts-color);
+  background-color: var(--primary-color);
 }
 
 .cardContainer:hover{
