--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@ html, body{
   overflow-x: hidden;
   width: 100vw;
   height: 100%;
-  /* background: linear-gradient(var(--primary-color), var(--secondary-color), var(--primary-color), var(--secondary-color)); */
-  transition-duration: 0.5s;
+  /* background-image: url(./utils/wallpaper_800x600.jpg);
+  /* transition-duration: 0.5s; */
 }
 
 :root{
@@ -32,7 +32,7 @@ html, body{
   --scroll-bar-secondary-color: #797676;
   --scroll-bar-ternary-color: #979393;
   --button-hover-color: #69a7a0;
-  background-color: white !important;
+  background-color: white;
 }
 
 ::-webkit-scrollbar{
