--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: var(--primary-color);
+  color: white;
   padding: 5px 3% 5px 3%;
   transition-duration: 2s;
 }
@@ -22,11 +22,11 @@
 }
 
 
-.FlexClose{
+.inputAndSearchButton{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex: 0.4;
+  flex: 0.5;
   background-color: white;
   border: 2px solid #97bec3;
   border-radius: 15px;
@@ -37,12 +37,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex: 0.08;
+  flex: 0.15;
 }
 
 .icons{
   cursor: pointer;
   transition-duration: 0.5s;
+  color: white;
 }
 
 .icons:hover{
@@ -52,4 +53,27 @@
 .notificationBadge{
   cursor: pointer;
   font-size: 0.5px;
+}
+
+
+
+
+.userMenuContainer{
+  transition-duration: 0.5s;
+  z-index: 1;
+}
+
+.userMenuContainer:hover{
+  color: var(--ternary-color);
+
+}
+
+@media (max-width: 700px){
+  .FlexDistant{
+    display: none;
+  }
+
+  .inputAndSearchButton{
+    flex: 0.7;
+  }
 }
