--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,4 +1,4 @@
-.cardContainer, .cardImage{
+.cardContainer, .cardImage, .movieDetails{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +11,7 @@
   border: 1px solid gray;
   color: var(--fonts-color);
   background-color: var(--primary-color);
+  cursor: pointer;
 }
 
 .cardContainer:hover{
