--- a/src/components/MovieDetails/style.css
+++ b/src/components/MovieDetails/style.css
@@ -5,14 +5,19 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-items: center;
 }
+
 .movieData{
   margin-right: 40px;
   padding-top: 50px;
 }
+
 .movieImage{
   width: 50%;
   height: 100%;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  /* gap: 15px; */
   overflow: hidden;
   padding-top: 50px;
 }
@@ -20,6 +25,23 @@
 .movieImage > img{
   width: 100%;
   height: 100%;
+  padding-bottom: 10px;
+  border-radius: 8px;
+}
+
+.movieImage > a{
+  padding: 10px;
+  color: var(--fonts-color);
+  background-color: #DD003F;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+}
+
+.movieImage > a:hover{
+  background-color: #dd2559;
 }
 
 .favCartButtons, .addToCart, .addToFavorites{
