--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,6 +1,7 @@
 .modalContainer{
   background-color: transparent;
   position: absolute;
+  top: 0;
   height: 100vh;
   width: 100%;
   display: flex;
