--- a/src/components/UserMenu/style.css
+++ b/src/components/UserMenu/style.css
@@ -9,7 +9,6 @@
 
 .userMenu{
   background-color: var(--primary-color);
-  color: var(--fonts-color);
 }
 
 .userMenu > li:hover{
@@ -21,6 +20,7 @@
 }
 
 .userMenu > li > a{
+  color: var(--fonts-color) !important;
   text-decoration: none;
   height: 100%;
   width: 100%;
