manipulando carrinho e favoritos no banco

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -60,6 +60,8 @@
 .secondHeader{
   display: none;
   justify-content: space-between;
+  align-items: center;
+  padding-top: 4px;
 }
 
 .secondHeader > div{
