--- a/src/components/SideNavCart/style.css
+++ b/src/components/SideNavCart/style.css
@@ -71,14 +71,12 @@
   width: 100%;
   height: 40px;
   margin: 10px 0 10px 0;
-  background-color: var(---secondary-color);
+  background-color: var(--secondary-color);
   border: none;
   border-radius: 5px;
   cursor: pointer;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border: 1px solid var(--fonts-color);
 }
 
 .finishPurchaseButton a{
@@ -90,7 +88,7 @@
   font-size: 1em;
   display: inline-block;
   text-align: center;
-  line-height: 40px;
+  line-height: 37px;
 }
 
 .finishPurchaseButton:hover{
