mudando cor do pagination

--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -9,7 +9,7 @@
 
 .paginationContainer button{
   outline: none;
-  background-color: var(--secondary-color);;
+  background-color: #6558f5;
   border: none;
   color: white;
   font-size: 1em;
