ajustando margins do header e nome do filme no card que tava vazando e sumindo

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,10 +1,13 @@
 .cardContainer, .cardImage, .movieDetails{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
   border-radius: 10px;
   overflow: hidden;
+}
+
+.movieDetails p, .starsGenre{
+  align-self: center;
 }
 
 .cardContainer{
